# SOMCPU

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  SOMCPU  TOREMOVE.txt
src/: SOM.cpp  cmdline.c  cmdline.h  distance_functions.cpp  distance_functions.h  lineparser.ggo  update_functions.cpp  update_functions.h  utility_functions.cpp  utility_functions.h
